--- a/.env-sample
+++ b/.env-sample
@@ -1,2 +1,4 @@
+# Telegram Bot Authorization Token
 TOKEN = "TelegramBotToken"
+# Telegram Bot Authorized Users (Telegram User ID)
 AUTORIZED_USERS = ['myUserID']
