modified:   .env-sample

--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,8 @@
 # Telegram Bot Authorization Token
-TOKEN = "TelegramBotToken"
+TOKEN="TelegramBotToken"
+
 # Telegram Bot Authorized Users (Telegram User ID)
-AUTORIZED_USERS = ['myUserID']
+AUTORIZED_USERS=['myUserID']
+
+# Default jail for BAN actions
+DEFAULT_BAN_JAIL=manual_ban
